--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
-        "laravelcollective/html": "5.1.*"
+        "laravelcollective/html": "5.1.*",
+        "maatwebsite/excel": "~2.0.0",
+        "tecnick.com/tcpdf": "~6.0.0"
     },
     "autoload": {
         "classmap": [
